[project]
name = "Lacus-Log"
optional-dependencies.dev = [ "yapf", "pylint" ]

[tool.yapf]
based_on_style = "pep8"
COLUMN_LIMIT = 160

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = "too-many-lines,invalid-name,wrong-import-order,global-statement,broad-exception-caught,broad-exception-raised,missing-module-docstring,missing-class-docstring,missing-function-docstring,logging-fstring-interpolation,import-outside-toplevel"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 慢速测试",
    "requires_db: 需要数据库连接的测试"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]